5814
Replying to [comment:3 odersky]:
Sorry, I don't quite understand your example:
{code}
scala> def f[C >: Any <: Nothing] {}
<console>:8: error: type arguments [Any] do not conform to method f's type parameter bounds [C >: Any <: Nothing]
  `f`
                       ^
{code}
Isn't it ok for the code to use false assumptions when it can never be reached because type parameters can not be instantiated?
